# rosa_dev

./: .gitignore  CMakeLists.txt
data/: blades_ds05.pcd  cloud.pcd  output.pcd
include/: Extra_Del.hpp  rosa_main.hpp
src/: Extra_Del.cpp  rosa_exec.cpp  rosa_main.cpp
vis_tools/: pcd_vis.py
vis_tools/data/: output.pcd
